// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should give fallback to md title 1`] = `
Object {
  "body": Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "children": undefined,
            "props": Object {
              "class": "icon icon-link",
            },
            "tag": "span",
          },
        ],
        "props": Object {
          "aria-hidden": "true",
          "href": "#title-md",
        },
        "tag": "a",
      },
      "Title md",
    ],
    "props": Object {
      "id": "title-md",
    },
    "tag": "h1",
  },
  "headings": Array [
    Object {
      "id": "title-md",
      "level": 1,
      "text": "Title md",
    },
  ],
  "title": "Title md",
}
`;

exports[`should give front title 1`] = `
Object {
  "body": Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "children": undefined,
            "props": Object {
              "class": "icon icon-link",
            },
            "tag": "span",
          },
        ],
        "props": Object {
          "aria-hidden": "true",
          "href": "#title-md",
        },
        "tag": "a",
      },
      "Title md",
    ],
    "props": Object {
      "id": "title-md",
    },
    "tag": "h1",
  },
  "headings": Array [
    Object {
      "id": "title-md",
      "level": 1,
      "text": "Title md",
    },
  ],
  "title": "Title front",
}
`;

exports[`should transform markdown as js 1`] = `
Object {
  "body": Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "children": undefined,
                "props": Object {
                  "class": "icon icon-link",
                },
                "tag": "span",
              },
            ],
            "props": Object {
              "aria-hidden": "true",
              "href": "#test",
            },
            "tag": "a",
          },
          "Test",
        ],
        "props": Object {
          "id": "test",
        },
        "tag": "h2",
      },
      "
",
      Object {
        "children": Array [
          Object {
            "children": Array [
              "link",
            ],
            "props": Object {
              "href": "href",
            },
            "tag": "a",
          },
        ],
        "props": undefined,
        "tag": "p",
      },
      "
",
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "children": Array [
                  "console",
                ],
                "props": Object {
                  "class": "hljs-built_in",
                },
                "tag": "span",
              },
              ".log(",
              Object {
                "children": Array [
                  "window",
                ],
                "props": Object {
                  "class": "hljs-built_in",
                },
                "tag": "span",
              },
              ")",
            ],
            "props": Object {
              "class": "hljs language-js",
            },
            "tag": "code",
          },
        ],
        "props": undefined,
        "tag": "pre",
      },
    ],
    "props": undefined,
    "tag": "div",
  },
  "headings": Array [
    Object {
      "id": "test",
      "level": 2,
      "text": "Test",
    },
  ],
  "test": "a",
  "test2": "b",
  "title": undefined,
}
`;

exports[`should works for files 1`] = `
Object {
  "body": Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "props": Object {
                  "class": "icon icon-link",
                },
                "tag": "span",
              },
            ],
            "props": Object {
              "aria-hidden": "true",
              "href": "#test",
            },
            "tag": "a",
          },
          "Test",
        ],
        "props": Object {
          "id": "test",
        },
        "tag": "h2",
      },
      "
",
      Object {
        "children": Array [
          Object {
            "children": Array [
              "link",
            ],
            "props": Object {
              "href": "url",
            },
            "tag": "a",
          },
        ],
        "tag": "p",
      },
    ],
    "tag": "div",
  },
  "headings": Array [
    Object {
      "id": "test",
      "level": 2,
      "text": "Test",
    },
  ],
  "title": "test",
}
`;
